--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_blue_dark"
+    android:background="@color/backgroundColor"
     android:visibility="visible"
     tools:context=".MainActivity">
 
@@ -12,6 +12,10 @@
         android:id="@+id/monitor"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/screen"
         android:fontFamily="serif"
         android:gravity="right|center_vertical"
         android:textColor="@android:color/background_light"
@@ -26,6 +30,10 @@
         android:id="@+id/resultTextView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="4dp"
+        android:background="@drawable/screen"
         android:fontFamily="serif"
         android:gravity="right|center_vertical"
         android:textColor="@android:color/white"
@@ -38,7 +46,11 @@
     <LinearLayout
         android:id="@+id/row_1"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="4dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@id/row_2"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -48,22 +60,26 @@
         <Button
             android:id="@+id/cancel_Button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
             android:layout_weight="1"
-            android:background="@color/colorAccent"
             android:fontFamily="serif"
             android:onClick="cancel"
             android:text="@string/cancelText"
             android:textAlignment="center"
             android:textSize="36sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:background="@drawable/mycancelbutton"/>
 
         <Button
             android:id="@+id/bracket_Left"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
             android:layout_weight="1"
-            android:background="@color/colorAccent"
+            android:background="@drawable/myoprationbutton"
             android:fontFamily="serif"
             android:onClick="leftBracket"
             android:text="@string/leftBracketText"
@@ -74,9 +90,11 @@
         <Button
             android:id="@+id/bracket_Right"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
             android:layout_weight="1"
-            android:background="@color/colorAccent"
+            android:background="@drawable/myoprationbutton"
             android:fontFamily="serif"
             android:onClick="memory"
             android:text="@string/rightBracketText"
@@ -87,9 +105,11 @@
         <Button
             android:id="@+id/backspace_Button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
             android:layout_weight="1"
-            android:background="@color/colorAccent"
+            android:background="@drawable/myoprationbutton"
             android:fontFamily="serif"
             android:onClick="backspace"
             android:text="@string/backspaceText"
@@ -101,7 +121,11 @@
     <LinearLayout
         android:id="@+id/row_2"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="4dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@id/row_3"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -111,9 +135,11 @@
         <Button
             android:id="@+id/seven_Button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
             android:layout_weight="1"
-            android:background="@color/colorAccent"
+            android:background="@drawable/mynumberbutton"
             android:fontFamily="serif"
             android:onClick="seven"
             android:text="@string/sevenText"
@@ -124,9 +150,11 @@
         <Button
             android:id="@+id/eight_Button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
             android:layout_weight="1"
-            android:background="@color/colorAccent"
+            android:background="@drawable/mynumberbutton"
             android:fontFamily="serif"
             android:onClick="eight"
             android:text="@string/eightText"
@@ -137,9 +165,11 @@
         <Button
             android:id="@+id/nine_Button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
             android:layout_weight="1"
-            android:background="@color/colorAccent"
+            android:background="@drawable/mynumberbutton"
             android:fontFamily="serif"
             android:onClick="nine"
             android:text="@string/nineText"
@@ -150,9 +180,11 @@
         <Button
             android:id="@+id/division_Button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
             android:layout_weight="1"
-            android:background="@color/colorAccent"
+            android:background="@drawable/myoprationbutton"
             android:fontFamily="serif"
             android:onClick="divide"
             android:text="@string/divisionText"
@@ -164,7 +196,11 @@
     <LinearLayout
         android:id="@+id/row_3"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="4dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@id/row_4"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -174,9 +210,11 @@
         <Button
             android:id="@+id/four_Button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
             android:layout_weight="1"
-            android:background="@color/colorAccent"
+            android:background="@drawable/mynumberbutton"
             android:fontFamily="serif"
             android:onClick="four"
             android:text="@string/fourText"
@@ -187,9 +225,11 @@
         <Button
             android:id="@+id/five_Button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
             android:layout_weight="1"
-            android:background="@color/colorAccent"
+            android:background="@drawable/mynumberbutton"
             android:fontFamily="serif"
             android:onClick="five"
             android:text="@string/fiveText"
@@ -200,9 +240,11 @@
         <Button
             android:id="@+id/six_Button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
             android:layout_weight="1"
-            android:background="@color/colorAccent"
+            android:background="@drawable/mynumberbutton"
             android:fontFamily="serif"
             android:onClick="six"
             android:text="@string/sixText"
@@ -213,9 +255,11 @@
         <Button
             android:id="@+id/multiply_Button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
             android:layout_weight="1"
-            android:background="@color/colorAccent"
+            android:background="@drawable/myoprationbutton"
             android:fontFamily="serif"
             android:onClick="multiply"
             android:text="@string/multiplyText"
@@ -227,7 +271,11 @@
     <LinearLayout
         android:id="@+id/row_4"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="4dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@id/row_5"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -237,9 +285,11 @@
         <Button
             android:id="@+id/one_Button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
             android:layout_weight="1"
-            android:background="@color/colorAccent"
+            android:background="@drawable/mynumberbutton"
             android:fontFamily="serif"
             android:onClick="one"
             android:text="@string/oneText"
@@ -250,9 +300,11 @@
         <Button
             android:id="@+id/two_Button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
             android:layout_weight="1"
-            android:background="@color/colorAccent"
+            android:background="@drawable/mynumberbutton"
             android:fontFamily="serif"
             android:onClick="two"
             android:text="@string/twoText"
@@ -263,9 +315,11 @@
         <Button
             android:id="@+id/three_Button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
             android:layout_weight="1"
-            android:background="@color/colorAccent"
+            android:background="@drawable/mynumberbutton"
             android:fontFamily="serif"
             android:onClick="three"
             android:text="@string/threeText"
@@ -276,9 +330,11 @@
         <Button
             android:id="@+id/subtract_Button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
             android:layout_weight="1"
-            android:background="@color/colorAccent"
+            android:background="@drawable/myoprationbutton"
             android:fontFamily="serif"
             android:onClick="subtract"
             android:text="@string/subtractText"
@@ -290,10 +346,14 @@
     <LinearLayout
         android:id="@+id/row_5"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="4dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/row_4">
@@ -301,9 +361,11 @@
         <Button
             android:id="@+id/zero_Button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
             android:layout_weight="1"
-            android:background="@color/colorAccent"
+            android:background="@drawable/mynumberbutton"
             android:fontFamily="serif"
             android:onClick="Zero"
             android:text="@string/zeroText"
@@ -314,9 +376,11 @@
         <Button
             android:id="@+id/decimal_Button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
             android:layout_weight="1"
-            android:background="@color/colorAccent"
+            android:background="@drawable/mynumberbutton"
             android:fontFamily="serif"
             android:onClick="decimal"
             android:text="@string/decimalText"
@@ -327,9 +391,11 @@
         <Button
             android:id="@+id/equal_Button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
             android:layout_weight="1"
-            android:background="@color/colorAccent"
+            android:background="@drawable/myoprationbutton"
             android:fontFamily="serif"
             android:onClick="result"
             android:text="@string/equalText"
@@ -340,9 +406,11 @@
         <Button
             android:id="@+id/addition_Button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
             android:layout_weight="1"
-            android:background="@color/colorAccent"
+            android:background="@drawable/myoprationbutton"
             android:fontFamily="serif"
             android:onClick="add"
             android:text="@string/additionText"
