--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimaryDark">#2a3b4d</color>
     <color name="colorAccent">#00d81b60</color>
+    <color name="textEditorColor">#31bafe</color>
+    <color name="backgroundColor">#2a3b4d</color>
+    <color name="numberButtonColor">#f1553f</color>
+    <color name="operationButtonColor">#90deaa</color>
 </resources>
